Fixed nav collapse

--- a/style.css
+++ b/style.css
@@ -100,5 +100,5 @@ body{
     padding: 0 5 5 5;
 }
 
-.hidden { visibility: hidden; }
-.unhidden { visibility: visible; }
+.hidden { display: none;}
+.unhidden { display: inline; }
